--- a/temples.html
+++ b/temples.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel ="stylesheet" href="styles/temples.css">
+    <link rel="stylesheet" href="styles/temples.css">
+    <link rel="stylesheet" href="styles/temples-large.css" media="screen and (min-width: 992px)">
     <script src="scripts/temples.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals Shirley Rabell Temples page">
+    <meta name="description" content="Shirley Rabell Temples Album">
     <meta name="author" content="Shirley Rabell">
     <title>Temple Album Shirley Rabell WDD 131</title>
 
@@ -26,44 +27,42 @@
         </nav>
     </header>
     <main>
-        <h1>
-            Home
-        </h1>
+        <h1>Home</h1>
         <div class="figure-grid">
         <figure>
-            <img src="./images/salt-lake-temple.jpg" alt="Salt Lake City Temple" style="width:100%">
+            <img src="./images/salt-lake-temple.jpg" alt="Salt Lake City Temple">
             <figcaption>Salt Lake City Temple</figcaption>
         </figure>
         <figure>
-            <img src="./images/salt-lake-temple.jpg" alt="Salt Lake City Temple" style="width:100%">
+            <img src="./images/salt-lake-temple.jpg" alt="Salt Lake City Temple">
             <figcaption>Salt Lake City Temple</figcaption>
         </figure>
         <figure>
-            <img src="./images/salt-lake-temple.jpg" alt="Salt Lake City Temple" style="width:100%">
+            <img src="./images/salt-lake-temple.jpg" alt="Salt Lake City Temple">
             <figcaption>Salt Lake City Temple</figcaption>
         </figure>
         <figure>
-            <img src="./images/salt-lake-temple.jpg" alt="Salt Lake City Temple" style="width:100%">
+            <img src="./images/salt-lake-temple.jpg" alt="Salt Lake City Temple">
             <figcaption>Salt Lake City Temple</figcaption>
         </figure>
         <figure>
-            <img src="./images/salt-lake-temple.jpg" alt="Salt Lake City Temple" style="width:100%">
+            <img src="./images/salt-lake-temple.jpg" alt="Salt Lake City Temple">
             <figcaption>Salt Lake City Temple</figcaption>
         </figure>
         <figure>
-            <img src="./images/salt-lake-temple.jpg" alt="Salt Lake City Temple" style="width:100%">
+            <img src="./images/salt-lake-temple.jpg" alt="Salt Lake City Temple">
             <figcaption>Salt Lake City Temple</figcaption>
         </figure>
         <figure>
-            <img src="./images/salt-lake-temple.jpg" alt="Salt Lake City Temple" style="width:100%">
+            <img src="./images/salt-lake-temple.jpg" alt="Salt Lake City Temple">
             <figcaption>Salt Lake City Temple</figcaption>
         </figure>
         <figure>
-            <img src="./images/salt-lake-temple.jpg" alt="Salt Lake City Temple" style="width:100%">
+            <img src="./images/salt-lake-temple.jpg" alt="Salt Lake City Temple">
             <figcaption>Salt Lake City Temple</figcaption>
         </figure>
         <figure>
-            <img src="./images/salt-lake-temple.jpg" alt="Salt Lake City Temple" style="width:100%">
+            <img src="./images/salt-lake-temple.jpg" alt="Salt Lake City Temple">
             <figcaption>Salt Lake City Temple</figcaption>
         </figure>
         </div>
