--- a/project/gifts.html
+++ b/project/gifts.html
@@ -46,7 +46,7 @@
             <h2>External Registries</h2>
             <ul>
                 <li><a href="#">Crate & Barrel</a></li>
-                <li><a href="#">Amazon Wish List</a></li>
+                <li><a href="https://www.amazon.com">Amazon Wish List</a></li>
             </ul>
         </section>
 
