--- a/project/rsvp.html
+++ b/project/rsvp.html
@@ -43,7 +43,7 @@
                     <input type="text" id="fullName" name="fullName" required>
                     
                     <label for="partySize">Party Size (including yourself):</label>
-                    <input type="number" id="partySize" name="partySize" min="1" max="6" required>
+                    <input type="number" id="partySize" name="partySize" min="1" max="6" placeholder="max 6 persons" required>
                 </fieldset>
                 
                 <fieldset>
