--- a/project/rsvp.html
+++ b/project/rsvp.html
@@ -15,7 +15,7 @@
     
     <header>
         <div class="header-container">
-            <img src="images/logoShirleyGilbertov3.webp" alt="Shirley & Gilberto Wedding Monogram Logo" class="site-logo">
+            <img src="images/logoshirleygilbertov3.webp" alt="Shirley & Gilberto Wedding Monogram Logo" class="site-logo">
             <nav>
                 <ul>
                     <li><a href="index.html">Love Story</a></li>
@@ -80,6 +80,7 @@
     <footer>
         <p><span id="currentyear"></span></p>
         <p>Final Deadline to RSVP: 31 Dec 2026</p>
+        <p><a href="references.html">Content and Image Sources</a></p>
         <p id="lastModified"></p>
         
     </footer>
