--- a/project/details.html
+++ b/project/details.html
@@ -70,6 +70,7 @@
     <footer>
         <p><span id="currentyear"></span></p>
         <p>Contact: shirandgilberto27@wedding.com</p>
+        <p><a href="references.html">Content and Image Sources</a></p>
         <p id="lastModified"></p>
     </footer>
     
